--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
