--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "react-select": "^5.7.0",
     "sharp": "^0.31.3",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.6.0",
+    "prettier": "2.8.3"
   }
 }
