--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write --check ."
+    "format": "prettier --write --check .",
+    "lint-js": "eslint --fix"
   },
   "dependencies": {
     "@emotion/css": "^11.10.5",
@@ -30,7 +31,13 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.1",
     "prettier": "2.8.3"
   }
 }
