--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -30,8 +29,7 @@
     "react-hook-form": "^7.42.1",
     "react-select": "^5.7.0",
     "sharp": "^0.31.3",
-    "typescript": "4.9.4",
-    "yup": "^0.32.11"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
